--- a/package.json
+++ b/package.json
@@ -4,20 +4,35 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bottom-tabs/react-navigation": "^0.6.0",
+    "@react-navigation/native": "^7.0.4",
+    "@react-navigation/native-stack": "^7.1.1",
     "expo": "~52.0.11",
+    "expo-build-properties": "~0.13.1",
+    "expo-dev-client": "~5.0.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-bottom-tabs": "^0.6.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
+  },
+  "doctor": {
+    "reactNativeDirectoryCheck": {
+      "exclude": [
+        "@bottom-tabs/react-navigation"
+      ]
+    }
   },
   "private": true
 }
