--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-bottom-tabs": "^0.6.0",
+    "react-native-edge-to-edge": "^1.1.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native-screens": "~4.1.0",
+    "expo-system-ui": "~4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
