--- a/package.json
+++ b/package.json
@@ -10,21 +10,18 @@
   },
   "dependencies": {
     "@bottom-tabs/react-navigation": "^0.6.0",
-    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
     "expo": "~52.0.11",
     "expo-build-properties": "~0.13.1",
     "expo-dev-client": "~5.0.4",
-    "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-bottom-tabs": "^0.6.0",
     "react-native-edge-to-edge": "^1.1.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "expo-navigation-bar": "~4.0.4"
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -34,7 +31,8 @@
   "doctor": {
     "reactNativeDirectoryCheck": {
       "exclude": [
-        "@bottom-tabs/react-navigation"
+        "@bottom-tabs/react-navigation",
+        "react-native-bottom-tabs"
       ]
     }
   },
